[package]
name = "avia_serv"
version = "0.1.0"
authors = ["sergorl <serg.neworl@gmail.com>"]

[lib]
name = "avia"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio-core = "0.1"
hyper = "0.11.18"
futures = "0.1.14"
serde = "1.0.27"
serde_json = "1.0.9"
serde_derive = "1.0.27"
num_cpus = "1.8.0"
